# data-in-ai-revolution

./: .gitignore  MANIFEST.in  PYPI.md  README.md  go.mod  install.sh  pyproject.toml  workshopassets.go
.github/workflows/: deploy.yml
cmd/data-ai-lab-go/: main.go  main_test.go
data/: extended_example_api.json
frontend-slides/: tui-tour.html
internal/catalog/: catalog.go  catalog_test.go
internal/doctor/: doctor.go  doctor_test.go
internal/launch/: launch.go
internal/tui/: app.go  app_test.go  run.go  screenshots.go  screenshots_test.go
internal/workspace/: workspace.go
scripts/: manim_bpe_tokenization.py
src/data_in_ai_revolution/: __init__.py  app.tcss  catalog.py  cli.py  doctor.py  launchers.py  screenshots.py  tui.py  widgets.py
src/data_in_ai_revolution/assets/: README.md
src/data_in_ai_revolution/assets/frontend-slides/: tui-tour.html
src/data_in_ai_revolution/assets/notebooks/: 01_embeddings_explorer.ipynb  02_attention_heads_explorer.ipynb  03_rag_vector_search.ipynb  04_fine_tuning_data_formats.ipynb
src/data_in_ai_revolution/assets/scripts/: check_attention_heads.py  requirements.txt
tests/: test_catalog.py  test_cli.py  test_doctor.py  test_launchers.py  test_screenshots.py  test_tui.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/widgets/: AttentionHeadsWidget.tsx  BpeTokenizationWidget.tsx  ComputerVisionWidget.tsx  EmbeddingsWidget.tsx  FineTuningWidget.tsx  PredictiveMLWidget.tsx  QuantizationWidget.tsx  (+3 more)
web/src/hooks/: useClientMounted.ts
